<resources>
    <string name="app_name">Guess My Number App</string>
    <string name="str_reset">reset</string>
    <string name="str_arrow_down_desc">press arrow down</string>
    <string name="str_arrow_up_desc">press arrow up</string>
    <string name="str_success_desc">"press app has guessed the number "</string>
    <string name="str_question">Is your number %d?</string>
    <string name="str_answer">Your number is %d!</string>
    <string name="str_instructions">Think of a number\n between 1 and 10</string>
</resources>